<resources>
    <string name="app_name">SessionM Platform</string>
    <string name="receipts">Receipts</string>
    <string name="offers">Offers</string>
    <!--Please set your SessionM app api key-->
    <string name="app_key">c4d9427e894e3b0ddf67bd08280b11e051f66c82</string>
    <!--Please set your GCM sender id-->
    <string name="gcm_sender_id"></string>
    <string name="learn_more">Learn More</string>
    <string name="redeem">Redeem</string>
    <string name="logged_in">Logged In</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logged_out">Logged out</string>
    <string name="submitted">Submitted</string>
    <string name="log_in_or_sign_up">Log in / Sign up</string>
    <string name="zip_code">Zipcode</string>
    <string name="gender">Gender</string>
    <string name="yob">Year Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="achievement_unlocked">ACHIEVEMENT UNLOCKED</string>
    <string name="close_button_desc">Close Button</string>
    <string name="portal_button_desc">Portal Button</string>
    <string name="action_button_text">Log Action</string>
    <string name="custom_action_text">Custom Achievement</string>
    <string name="settings">Settings</string>
    <string name="activity_feed">Activity Feed</string>
    <string name="portal">Portal</string>
    <string name="auth_login">Auth Log In</string>

    <!-- Settings -->
    <array name="settings_array">
        <item>Geofence</item>
        <item>Push Notification</item>
        <item>Receipt Background Uploading</item>
        <item>Custom Loader</item>
        <item>User Opted Out</item>
        <item>SDK Version: </item>
        <item>App Version: </item>
        <item>Log Out</item>
        <item>Exit SessionM Platform App</item>
    </array>
    <string name="title_activity_offer_detail">OfferDetailActivity</string>
    <string name="title_activity_promotion_details">PromotionDetails</string>
    <string name="place_order">Place Order</string>
    <string name="terms_and_conditions">Terms and Conditions:</string>
    <string name="balance">Balance</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="points">Points</string>
    <string name="record_id">Record ID</string>
    <string name="transaction">Transaction</string>
    <string name="source">Source</string>
    <string name="type">Type</string>
    <string name="reward_name">Reward Name</string>
    <string name="status">Status</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="invalid_reason">Invalid Reason</string>
    <string name="upload_time">Upload Time</string>
    <string name="update_time">Update Time</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="quantity">Quantity</string>
    <string name="skill_challenge_description">Please answer the following question:</string>
    <string name="skill_challenge">Skill Challenge</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="logging_in">Logging in…</string>
    <string name="log_in_instruction">Please log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="sms_validation">SMS Verification</string>
    <string name="please_enter_you_phone_number">Please enter you phone number:</string>
    <string name="ok">Unlink</string>
    <string name="cancel">Cancel</string>
    <string name="link">Link</string>
    <string name="loyalty_card">Loyalty Card Linking</string>
    <string name="select_retailer">Select Retailer</string>
    <string name="card_number">Card #</string>
    <string name="not_now">Not now</string>
    <string name="image_count">Image Count</string>
    <string name="create_time">Create Time:</string>
    <string name="uploading">Uploading</string>
    <string name="log_in_with_sample_user">Log in with sample user</string>
    <string name="auth_token_log_in_with_sample_user">Auto token log in with sample user</string>
    <string name="incomplete_receipt">Incomplete Receipt</string>
    <string name="incomplete_receipt_description">You have incomplete receipt, do you want to upload them now?</string>
    <string name="send_referrals">Send Referrals</string>
    <string name="referral_id">Referrals ID</string>
    <string name="filter_by">Filter by</string>
    <string name="referee">Referee</string>
    <string name="phone_number">Phone Number</string>
    <string name="origin">Origin</string>
    <string name="client_data">Client Data</string>
    <string name="pending_at">Pending At</string>
    <string name="authenticate_with_token">Authenticate With Token</string>
    <string name="or">-- or --</string>
    <string name="store">Store</string>
    <string name="results">Results</string>
    <string name="address">Address</string>
    <string name="distance">Distance</string>
    <string name="bonus">Bonus</string>
    <string name="success">Success</string>
    <string name="price">Price</string>
    <string name="transaction_ref">Ref:</string>
    <string name="update_user">Update User</string>
    <string name="external_id">External ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dma">DMA</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ip_address">IP Address</string>
    <string name="update_user_tags">Update Tags</string>
    <string name="update_user_metadata">Update Metadata</string>
    <string name="location_permission_denied">Location permission denied!</string>
    <string name="permission_required_toast">Location permission required!</string>
    <string name="permission_rationale_location">Location permission is required for this demo.</string>

</resources>
