<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/item_row_padding"
              android:orientation="vertical">

    <TextView
        android:id="@+id/transaction_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"/>

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/transaction_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>


    <TextView
        android:id="@+id/transaction_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"/>

    <TextView
        android:id="@+id/transaction_record_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_id"/>

    <TextView
        android:id="@+id/transaction_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"/>

    <TextView
        android:id="@+id/transaction_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source"/>

    <TextView
        android:id="@+id/transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"/>
</LinearLayout>
