<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_margin"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="@dimen/item_row_padding">

        <TextView
            android:id="@+id/receipt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/receipt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/receipt_invalid_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_code"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/receipt_invalid_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_reason"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/receipt_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_time"/>

        <TextView
            android:id="@+id/receipt_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_time"/>

        <TextView
            android:id="@+id/receipt_image_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_count"/>

        <TextView
            android:id="@+id/receipt_valid_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/receipt_valid_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/receipt_valid_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
