<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/item_row_padding">

    <TextView
        android:id="@+id/receiptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reward_name"/>

    <TextView
        android:id="@+id/receiptStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <TextView
        android:id="@+id/receiptInvalidCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_code"/>

    <TextView
        android:id="@+id/receiptInvalidReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_reason"/>

    <TextView
        android:id="@+id/receiptUploadTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_time"/>
</LinearLayout>
