<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/item_row_padding"
            android:background="#e3f8cf">

            <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/transaction_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/transaction_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/transaction_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"/>

            <TextView
                android:id="@+id/transaction_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>

            <TextView
                android:id="@+id/transaction_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/transaction_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"/>

            <TextView
                android:id="@+id/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_time"/>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_time"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
