<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="@dimen/item_row_padding">

            <TextView
                android:id="@+id/place_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"/>

            <TextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/place_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"/>

            <TextView
                android:id="@+id/place_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"/>

            <TextView
                android:id="@+id/place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/place_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
